--- a/Klei/DoNotStarveTogether/MyDediServer/cluster.ini
+++ b/Klei/DoNotStarveTogether/MyDediServer/cluster.ini
@@ -9,7 +9,7 @@ pause_when_empty = true
 cluster_description = Youpiiiiii !!!
 cluster_name = On va ramasser du caca !!!
 cluster_intention = cooperative
-cluster_password = 
+cluster_password = pouet
 autosaver_enabled = true
 enable_vote_kick = false
 
@@ -27,4 +27,4 @@ cluster_key = supersecretkey
 [STEAM]
 steam_group_id = 27324348
 steam_group_admins = true
-steam_group_only = true
+steam_group_only = false
