use systemctl for startup

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
-*
-!.gitignore
-!init.d/
-!init.d/**
-!Klei/
-!Klei/**
 cluster_token.txt
 *_log.txt
 *_log_*.txt
 *.log
 save/
 backup/
-!dedicated_server_mods_setup.lua
-!run_dedicated_servers.sh
-!clean_dedicated_servers.sh
+Klei/Agreements/
+
